attached_assets/Pasted--NOBRIDGE-LOG-EmployeesScreen-Making-API-request-with-data-OrgId-1-pageId-0-PageNumber-1-1746260157760.txt
(NOBRIDGE) LOG  [EmployeesScreen] Making API request with data: {"OrgId":1,"pageId":0,"PageNumber":1,"PageSize":1000,"BearerTokenValue":"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJSZWNvcmRJZCI6IjEiLCJEZXZpY2VUeXBlIjoidyIsIk9yZ0lkIjoiMSIsIlVzZXJOYW1lIjoiYWRtaW4iLCJPcmdhbmlzYXRpb25OYW1lIjoiRGlnaWxsaXVtIERlbW8gMSIsIkVtcGxveWVlQ291bnQiOiIxNSIsIlVzZXJDb3VudCI6IjEwIiwiUHJvZHVjdENvdW50IjoiMjUiLCJDb250YWN0Q291bnQiOiIyMCIsIlRyYW5zYWN0aW9uQ291bnQiOiIzMCIsImV4cCI6MTc0NjI2MDM2MCwiaXNzIjoiQ2hlYXJJdCIsImF1ZCI6IkNoZWFySXQifQ.lLIkJmovbw_5WRWFGXJYMCTlvxokAYwN7jXx-B7POU4"}
 (NOBRIDGE) LOG  [EmployeesScreen] API Response: {"data":[{"orgId":1,"recordId":3206,"recordName":"MOHD I SUMAIYA FARVEEN"},{"orgId":1,"recordId":3204,"recordName":"MD IBRAHIM M MD Z M"},{"orgId":1,"recordId":3205,"recordName":"SULTAN EBRAHIM ABDUL RAZACK"},{"orgId":1,"recordId":3202,"recordName":"TEST-APR-SHANKAR"},{"orgId":1,"recordId":3203,"recordName":"TEST-APR-SALMAN"}],"isSuccess":true}
 (NOBRIDGE) LOG  [EmployeesScreen] Formatted employees: 5
 (NOBRIDGE) LOG  [EmployeesScreen] Rendering
 LOG  [web] Logs will appear in the browser console
 (NOBRIDGE) LOG  [EmployeesScreen] Rendering
 (NOBRIDGE) ERROR  The action 'NAVIGATE' with payload {"name":"RegisterFace","params":{"employeeId":3206,"employeeName":"MOHD I SUMAIYA FARVEEN","contactRecordId":3206}} was not handled by any navigator.

Do you have a route named 'RegisterFace'?

This is a development-only warning and won't be shown in production.
 (NOBRIDGE) LOG  [EmployeesScreen] Rendering
 (NOBRIDGE) LOG  [EmployeesScreen] Rendering
 (NOBRIDGE) ERROR  The action 'NAVIGATE' with payload {"name":"RegisterFace","params":{"employeeId":3202,"employeeName":"TEST-APR-SHANKAR","contactRecordId":3202}} was not handled by any navigator.

Do you have a route named 'RegisterFace'?

This is a development-only warning and won't be shown in production.
 (NOBRIDGE) LOG  [EmployeesScreen] Rendering
 ERROR  SyntaxError: /home/runner/workspace/app/register-face.tsx: Identifier 'React' has already been declared. (594:7)

  592 |   },
  593 | });
> 594 | import React, { useState, useRef, useEffect } from 'react';
      |        ^
  595 | import { View, StyleSheet, Alert, Text } from 'react-native';
  596 | import { Camera } from 'expo-camera';
  597 | import { useLocalSearchParams, router } from 'expo-router';
 ERROR  SyntaxError: /home/runner/workspace/app/register-face.tsx: Identifier 'React' has already been declared. (594:7)

  592 |   },
  593 | });
> 594 | import React, { useState, useRef, useEffect } from 'react';
      |        ^
  595 | import { View, StyleSheet, Alert, Text } from 'react-native';
  596 | import { Camera } from 'expo-camera';
  597 | import { useLocalSearchParams, router } from 'expo-router';
 (NOBRIDGE) ERROR  [Error: TransformError SyntaxError: /home/runner/workspace/app/register-face.tsx: Identifier 'React' has already been declared. (594:7)

  592 |   },
  593 | });
> 594 | import React, { useState, useRef, useEffect } from 'react';
      |        ^
  595 | import { View, StyleSheet, Alert, Text } from 'react-native';
  596 | import { Camera } from 'expo-camera';
  597 | import { useLocalSearchParams, router } from 'expo-router';]
 ERROR  SyntaxError: /home/runner/workspace/app/register-face.tsx: Identifier 'React' has already been declared. (594:7)

  592 |   },
  593 | });
> 594 | import React, { useState, useRef, useEffect } from 'react';
      |        ^
  595 | import { View, StyleSheet, Alert, Text } from 'react-native';
  596 | import { Camera } from 'expo-camera';
  597 | import { useLocalSearchParams, router } from 'expo-router';
 ERROR  SyntaxError: /home/runner/workspace/app/register-face.tsx: Identifier 'React' has already been declared. (594:7)

  592 |   },
  593 | });
> 594 | import React, { useState, useRef, useEffect } from 'react';
      |        ^
  595 | import { View, StyleSheet, Alert, Text } from 'react-native';
  596 | import { Camera } from 'expo-camera';
  597 | import { useLocalSearchParams, router } from 'expo-router';
 (NOBRIDGE) ERROR  [Error: TransformError SyntaxError: /home/runner/workspace/app/register-face.tsx: Identifier 'React' has already been declared. (594:7)

  592 |   },
  593 | });
> 594 | import React, { useState, useRef, useEffect } from 'react';
      |        ^
  595 | import { View, StyleSheet, Alert, Text } from 'react-native';
  596 | import { Camera } from 'expo-camera';
  597 | import { useLocalSearchParams, router } from 'expo-router';]
